# karatOS

./: .gdbinit  .gdbinit-riscv  .gitignore  CI_CD_ANALYSIS.md  CI_CD_IMPLEMENTATION.md  Cargo.toml  Dockerfile  JTAG-DEBUG.md  JTAG-QUICKSTART.md  LAUNCH-GUIDE.md  LICENSE  LOCAL_TESTING_GUIDE.md  MEMORY-LAYOUT-ANALYSIS.md  QEMU_TESTING.md  QUICK-REF.md  README.md  RISC-V-GUIDE.md  build-kernel.sh  build.sh  debug-fixed.sh  debug-gdb.sh  debug-interactive.sh  debug-openocd.sh  debug-riscv.sh  debug-rust-gdb.sh  docker-compose.yml  install-dependencies.sh  memory-riscv-minimal.x  memory-riscv-simple.x  memory-riscv.x  qemu-arm.sh  qemu-jtag-debug.sh  qemu-jtag-nostart.sh  qemu-riscv.sh  qemu-riscv32.sh  riscv32imac-qemu-virt.json  run-qemu.sh  run_tests.sh  simple-gdb-test.sh  test-all.sh  (+4 more)
.github/workflows/: ci.yml
ci/: README.md  docker_ci.py  test_runner.py
kernel/: .gitignore  Cargo-arm-direct.toml  Cargo.toml  TEST_RESULTS.md  build.rs  kernel.sh  memory-arm-simple.x  memory-arm-working.x  memory-arm.x  memory-arm.x.backup  memory-lm3s6965evb.x  memory-riscv.x  memory-virt.x  memory.x  memory.x.backup  memory_arm.x
kernel-riscv-minimal/: Cargo.toml  README.md  analyze-qemu.sh  build.sh  debug-monitor.sh  debug-qemu.sh  kernel.sh  run-qemu.sh  test-comprehensive.sh  test-file-output.sh  test-memory-verify.sh  test-memory.sh  test-opensbi.sh  test-qemu.sh  test-serial-configs.sh  test.sh  virt.dtb
kernel-riscv-minimal/src/: main.rs  main_blast.rs  main_debug.rs  main_memory_test.rs  main_proper_uart.rs  main_test.rs  main_verbose.rs
kernel/.cargo/: config-riscv-minimal.toml  config.toml
kernel/configs/: README.md  arm_lm3s6965.toml  riscv_qemu.toml
kernel/qemu/arm/: debug.sh  run.sh
kernel/qemu/riscv/: debug.sh  dtb.sh  run.sh
kernel/src/: arch.rs  board.rs  boot.S  boot.s  config.rs  kernel.rs  lib.rs  logger.rs  main.rs  main_simple_arm.rs  main_simple_arm_direct.rs  main_simple_riscv.rs  memory.rs  minimal.rs  qemu_uart.rs  riscv_rt_config.rs  scheduler.rs  simple_async_scheduler.rs  test_suite.rs  time_driver.rs  uart.rs
kernel/src/arch/: arm.rs  mod.rs  mod_new.rs  mod_old.rs  riscv.rs
kernel/src/config/: arm.rs  mod.rs  riscv.rs
kernel/src/drivers/: mod.rs  timer.rs  uart.rs  uart_simple.rs
