[package]
name = "karatos-kernel"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["karatOS Contributors"]
description = "Multi-architecture Rust RTOS kernel for ARM and RISC-V"
repository = "https://github.com/loongx2/karatOS"
keywords = ["rtos", "embedded", "arm", "riscv", "no-std"]
categories = ["embedded", "os"]

[workspace]
# Empty workspace to avoid conflicts with parent workspace

[dependencies]
# ARM dependencies
cortex-m-rt = { version = "0.7", default-features = false, optional = true }
cortex-m-semihosting = { version = "0.5", optional = true }
cortex-m = { version = "0.7", optional = true }

# RISC-V dependencies - avoiding riscv-rt to prevent linker conflicts
riscv = { version = "0.11", optional = true }

# Common dependencies
panic-halt = { version = "0.2" }
nb = { version = "1.0", optional = true }
heapless = { version = "0.8" }

[features]
# Architecture features
arm = ["cortex-m-rt", "cortex-m-semihosting", "cortex-m", "nb"]
riscv = ["dep:riscv", "nb"]

# Default feature set
default = []

[[bin]]
name = "kernel"
path = "src/main.rs"

[[bin]]
name = "kernel-riscv-simple"
path = "src/main_simple_riscv.rs"

[profile.dev]
panic = "abort"
lto = false

[profile.release]
panic = "abort"
lto = true
opt-level = "s"
