[package]
name = "karatos-kernel"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["karatOS Contributors"]
description = "Multi-architecture Rust RTOS kernel for ARM and RISC-V"
repository = "https://github.com/loongx2/karatOS"
keywords = ["rtos", "embedded", "arm", "riscv", "no-std"]
categories = ["embedded", "os"]

[dependencies]
# ARM dependencies
cortex-m-rt = { version = "0.7", default-features = false, optional = true }
cortex-m-semihosting = { version = "0.5", optional = true }
cortex-m = { version = "0.7", optional = true }

# RISC-V dependencies 
riscv-rt = { version = "0.12", optional = true }
riscv = { version = "0.11", optional = true }

# Async executor for event-driven scheduling
embassy-executor = { version = "0.6", default-features = false, features = ["executor-thread"] }
embassy-time = { version = "0.3", default-features = false, optional = true }
critical-section = { version = "1.0", default-features = false, optional = true }

# Common dependencies
panic-halt = { version = "0.2" }
nb = { version = "1.0", optional = true }
heapless = { version = "0.8" }

[features]
# Architecture features
arm = ["cortex-m-rt", "cortex-m-semihosting", "cortex-m", "nb", "embassy-executor/arch-cortex-m", "embassy-time", "critical-section"]
riscv = ["riscv-rt", "dep:riscv", "nb", "embassy-executor/arch-riscv32", "embassy-time", "critical-section"]

# Test mode feature
test_mode = []

# Default feature set
default = []

[lib]
name = "kernel_lib"
path = "src/lib.rs"

[[bin]]
name = "kernel"
path = "src/main.rs"

[profile.dev]
panic = "abort"
lto = false

[profile.release]
panic = "abort"
lto = true
opt-level = "s"
